--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             </svg>
                         </div>
                         <div class="specifics"></div>
-                        <h3 class="feature__list">Внимание к деталям</h3>
+                        <h3 class="feature__list--title">Внимание к деталям</h3>
                         <p class="feature__text">Идейные соображения, а также начало повседневной работы по формированию
                             позиции.</p>
                     </li>
@@ -141,7 +141,7 @@
                             </svg>
                         </div>
                         <div class="specifics"></div>
-                        <h3 class="feature__list">Пунктуальность</h3>
+                        <h3 class="feature__list--title">Пунктуальность</h3>
                         <p class="feature__text">Задача организации, в особенности же рамки и место обучения кадров влечет за
                             собой.</p>
                     </li>
@@ -152,7 +152,7 @@
                             </svg>
                         </div>
                         <div class="specifics"></div>
-                        <h3 class="feature__list">Планирование</h3>
+                        <h3 class="feature__list--title">Планирование</h3>
                         <p class="feature__text">Равным образом консультация с широким активом в значительной степени
                             обуславливает.</p>
                     </li>
@@ -163,7 +163,7 @@
                             </svg>
                         </div>
                         <div class="specifics"></div>
-                        <h3 class="feature__list">Современные технологии</h3>
+                        <h3 class="feature__list--title">Современные технологии</h3>
                         <p class="feature__text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.
                         </p>
                     </li>
@@ -397,7 +397,7 @@
         <div class="container footer__container">
             <!--address-->
             <div class="footer__address">
-                <a href="" class="footer__logo logo"><span class="footer__logo--color ">Web</span>Studio</a>
+                <a href="" class="footer__logo logotip"><span class="footer__logo--color ">Web</span>Studio</a>
                 <div class="address">
                     <p class="info address__street">г. Киев, пр-т Леси Украинки, 26</p>
                     <p class="info address__contact">info@devstudio.com</p>
