--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <div class="header-inner">
                 <nav class="page-header__nav">
                     <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
+                  <div class="page-header__menu" id="page-header__menu" data-menu>
                     <ul class="page-header__list">
                         <li class="page-header__item">
                         <a class="page-header__link page-header__link--active" href="./index.html">Студия</a>
@@ -27,8 +28,7 @@
                         <a class="page-header__link" href="">Контакты</a>
                         </li>
                     </ul>
-                </nav>
-                <ul class="page-header__nav page-header__nav--list">
+                    <ul class="page-header__list page-header__list--contact">
                     <li class="page-header__item">
                         <a href="mailto:info@devstudio.com" class="button primary page-header__link">
                             <svg class="page-header__icon--mail">
@@ -45,7 +45,9 @@
                             +38(096)111 11 11
                         </a>
                     </li>
-                </ul>
+                    </ul>
+                  </div>
+                </nav>      
             </div>
         </div>
     </header>
