--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@
     <footer class="footer">
         <div class="container footer__container">
             <!--address-->
+            <div class="footer__pozition">
             <div class="footer__address">
                 <a href="" class="footer__logo logotip"><span class="footer__logo--color ">Web</span>Studio</a>
                 <div class="address">
@@ -439,6 +440,7 @@
                         </a>
                     </li>
                 </ul>
+            </div>
             </div>
             <!-- activ -->
             <div class="activ-menu">
