--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
             <div class="header-inner">
                 <nav class="page-header__nav">
                     <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
-                  <div class="page-header__menu" id="page-header__menu" data-menu>
-                    <ul class="page-header__list">
-                        <li class="page-header__item">
+                  <!-- <div class="page-header__menu" id="page-header__menu" data-menu> -->
+                    <ul class="page-header__list page-header__list--nav">
+                        <li class="page-header__item page-header__item--nav">
                         <a class="page-header__link page-header__link--active" href="./index.html">Студия</a>
                         </li>
-                        <li class="page-header__item">
+                        <li class="page-header__item page-header__item--nav">
                         <a class="page-header__link" href="./portfolio.html">Портфолио</a>
                         </li>
-                        <li class="page-header__item">
+                        <li class="page-header__item page-header__item--nav">
                         <a class="page-header__link" href="">Контакты</a>
                         </li>
                     </ul>
                     <ul class="page-header__list page-header__list--contact">
-                    <li class="page-header__item">
-                        <a href="mailto:info@devstudio.com" class="button primary page-header__link">
+                    <li class="page-header__item page-header__item--contact">
+                        <a href="mailto:info@devstudio.com" class="page-header__link">
                             <svg class="page-header__icon--mail">
                                 <use href="./images/sprite.svg#iconenvelope"></use>
                             </svg>
                             info@devstudio.com
                         </a>
                     </li>
-                    <li class="page-header__item">
-                        <a href="tel:+380961111111" class="button page-header__link">
+                    <li class="page-header__item page-header__item--contact">
+                        <a href="tel:+380961111111" class="page-header__link">
                             <svg class="page-header__icon--tell">
                                 <use href="./images/sprite.svg#iconsmartphone"></use>
                             </svg>
