--- a/portfolio.html
+++ b/portfolio.html
@@ -15,39 +15,39 @@
         <div class="header-inner">
           <nav class="page-header__nav">
             <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
-            <div class="page-header__menu" id="page-header__menu" data-menu>
-              <ul class="page-header__list page-header__list--nav">
-                <li class="page-header__item">
-                  <a class="page-header__link" href="./index.html">Студия</a>
-                </li>
-                <li class="page-header__item">
-                  <a class="page-header__link page-header__link--active" href="./portfolio.html">Портфолио</a>
-                </li>
-                <li class="page-header__item">
-                  <a class="page-header__link" href="">Контакты</a>
-                </li>
-              </ul>
-              <ul class="page-header__list page-header__list--contact">
-                <li class="page-header__item">
-                  <a href="mailto:info@devstudio.com" class="button page-header__link">
-                    <svg class="page-header__icon--mail">
-                      <use href="./images/sprite.svg#iconenvelope"></use>
-                    </svg>
-                    info@devstudio.com
-                  </a>
-                </li>
-                <li class="page-header__item">
-                  <a href="tel:+380961111111" class="button page-header__link">
-                    <svg class="page-header__icon--tell">
-                      <use href="./images/sprite.svg#iconsmartphone"></use>
-                    </svg>
-                    +38(096)111 11 11
-                  </a>
-                </li>
-              </ul>
-            </div>
-          </nav>
+            <!-- <div class="page-header__menu" id="page-header__menu" data-menu> -->
+            <ul class="page-header__list page-header__list--nav">
+              <li class="page-header__item page-header__item--nav">
+                <a class="page-header__link" href="./index.html">Студия</a>
+              </li>
+              <li class="page-header__item page-header__item--nav">
+                <a class="page-header__link page-header__link--active" href="./portfolio.html">Портфолио</a>
+              </li>
+              <li class="page-header__item page-header__item--nav">
+                <a class="page-header__link" href="">Контакты</a>
+              </li>
+            </ul>
+            <ul class="page-header__list page-header__list--contact">
+              <li class="page-header__item page-header__item--contact">
+                <a href="mailto:info@devstudio.com" class="page-header__link">
+                  <svg class="page-header__icon--mail">
+                    <use href="./images/sprite.svg#iconenvelope"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="page-header__item page-header__item--contact">
+                <a href="tel:+380961111111" class="page-header__link">
+                  <svg class="page-header__icon--tell">
+                    <use href="./images/sprite.svg#iconsmartphone"></use>
+                  </svg>
+                  +38(096)111 11 11
+                </a>
+              </li>
+            </ul>
         </div>
+        </nav>
+      </div>
       </div>
     </header>
     
@@ -62,7 +62,7 @@
                     <li class="menu__items">
                         <button type="button" class="menu__button" >Веб-сайты</button>
                     </li>
-                    <li class="menu__items">
+                    <li class="menu__items menu__items--padding">
                         <button type="button" class="menu__button" >Приложения</button>
                     </li>
                     <li class="menu__items">
@@ -87,7 +87,7 @@
                                     Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
                             </div>
-                            <div class="services__section">
+                            <div class="services__section services__section--padding">
                                 <h2 class="services__name" >Технокряк</h2>
                                 <p class="services__kind">Веб-сайт</p>
                             </div>
