--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
             <div class="header-inner">
                 <nav class="page-header__nav">
                     <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
+                    <button type="button" class="button__logo is-open">
+                      <svg width="40" height="40" aria-label="mobile menu switch">
+                        <use class="icon-menu"href="./svg/menu_open.svg#iconmenu_open"></use>
+                        <use class="icon-cross"href="./svg/menu_close.svg#iconmenu_close"></use>
+                      </svg>
+                    </button>
                   <!-- <div class="page-header__menu" id="page-header__menu" data-menu> -->
                     <ul class="page-header__list page-header__list--nav">
                         <li class="page-header__item page-header__item--nav">
