--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
                 <nav class="page-header__nav">
                   <div class="position">
                     <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
-                    <button type="button" aria-expanded="false" class="button__logo is-open">
-                      <svg width="40" height="40" aria-label="mobile menu switch" aria-controls="page-header__menu">
+                    <button type="button" aria-expanded="false" class="button__logo" >
+                      <svg width="40" height="40" aria-label="mobile menu switch" aria-controls="page-header__menu" >
                         <use class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
                         <use class="icon-cross" href="./images/sprite.svg#iconmenu_close"></use>
                       </svg>
                     </button>
                   </div>
-                  <div class="page-header__menu" id="page-header__menu" data-menu>
+                  <div class="page-header__menu" id="page-header__menu" body>
+                   
                     <ul class="page-header__list page-header__list--nav">
                         <li class="page-header__item page-header__item--nav">
                         <a class="page-header__link page-header__link--active" href="./index.html">Студия</a>
@@ -36,9 +37,9 @@
                         <a class="page-header__link" href="">Контакты</a>
                         </li>
                     </ul>
-                    <ul class="page-header__list page-header__list--contact">
+                    <ul class="page-header__list page-header__list--contact ">
                     <li class="page-header__item page-header__item--contact">
-                        <a href="mailto:info@devstudio.com" class="page-header__link">
+                        <a href="mailto:info@devstudio.com" class="page-header__link page-header__link--mail">
                             <svg class="page-header__icon--mail">
                                 <use href="./images/sprite.svg#iconenvelope"></use>
                             </svg>
@@ -46,7 +47,7 @@
                         </a>
                     </li>
                     <li class="page-header__item page-header__item--contact">
-                        <a href="tel:+380961111111" class="page-header__link">
+                        <a href="tel:+380961111111" class="page-header__link page-header__link--tell">
                             <svg class="page-header__icon--tell">
                                 <use href="./images/sprite.svg#iconsmartphone"></use>
                             </svg>
@@ -54,6 +55,35 @@
                         </a>
                     </li>
                     </ul>
+                    <ul class="page-header__list page-header__list--mobile">
+                      <li class="page-header__item page-header__item--contact">
+                        <a href="tel:+380961111111" class="page-header__link page-header__link--tell">
+                          <svg class="page-header__icon--tell">
+                            <use href="./images/sprite.svg#iconsmartphone"></use>
+                          </svg>
+                          +38(096)111 11 11
+                        </a>
+                      </li>
+                      <li class="page-header__item page-header__item--contact">
+                        <a href="mailto:info@devstudio.com" class="page-header__link page-header__link--mail">
+                          <svg class="page-header__icon--mail">
+                            <use href="./images/sprite.svg#iconenvelope"></use>
+                          </svg>
+                          info@devstudio.com
+                        </a>
+                      </li>
+                      </ul>
+                      <ul class="page-header__list-social">
+                        <li class="page-header__item-social"> 
+                         <a class="social-border" href="">Instagram</a></li>
+                        <li class="page-header__item-social"> 
+                          <a class="social-border" href="">Twitter</a></li>
+                        <li class="page-header__item-social"> 
+                          <a class="social-border" href="">Facebook</a></li>
+                        <li class="page-header__item-social"> 
+                          <a class="social-border" href="">LinkedIn</a></li>
+                      </ul>
+                    
                   </div>
                 </nav>      
             </div>
@@ -468,6 +498,7 @@
         </div>
     </footer>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
