--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
                 <nav class="page-header__nav">
                   <div class="position">
                     <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
-                    <button type="button" aria-expanded="false" class="button__logo" >
+                    <button type="button"  aria-expanded="false" class="button__logo" >
                       <svg width="40" height="40" aria-label="mobile menu switch" aria-controls="page-header__menu" >
-                        <use class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
+                        <use mob-menu__open-btn class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
                         <use class="icon-cross" href="./images/sprite.svg#iconmenu_close"></use>
                       </svg>
                     </button>
                   </div>
-                  <div class="page-header__menu" id="page-header__menu" body>
-                   
+                  <div body class="page-header__menu is-hidden" id="page-header__menu" >
                     <ul class="page-header__list page-header__list--nav">
                         <li class="page-header__item page-header__item--nav">
                         <a class="page-header__link page-header__link--active" href="./index.html">Студия</a>
@@ -140,7 +139,6 @@
                                         <span class="form__check--box"></span>
                                             Соглашаюсь с рассылкой и принимаю
                                         <a href="" class="form__link "> Условия договора </a>
-                                       
                                     </label>
                             </div>
                         <button class="button primary-top form__button" type="submit">
