--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
         <div class="container">
             <div class="header-inner">
                 <nav class="page-header__nav">
-                  <div class="position">
+                  <div class="position" id="position">
                     <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
                     <button type="button"  aria-expanded="false" class="button__logo">
-                      <svg width="40" height="40" aria-label="mobile menu switch" aria-controls="page-header__menu" >
+                      <svg width="40" height="40" aria-label="mobile menu switch" aria-controls="position" >
                         <use  class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
                         <use class="icon-cross" href="./images/sprite.svg#iconmenu_close"></use>
                       </svg>
                     </button>
                   </div>
-                  <div class="page-header__menu" id="page-header__menu">
+                  <div class="page-header__menu">
                     <ul class="page-header__list page-header__list--nav">
                         <li class="page-header__item page-header__item--nav">
                         <a class="page-header__link page-header__link--active" href="./index.html">Студия</a>
