--- a/portfolio.html
+++ b/portfolio.html
@@ -14,40 +14,81 @@
       <div class="container">
         <div class="header-inner">
           <nav class="page-header__nav">
-            <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
-            <div class="xxx">
-            <ul class="page-header__list page-header__list--nav">
-              <li class="page-header__item page-header__item--nav">
-                <a class="page-header__link" href="./index.html">Студия</a>
-              </li>
-              <li class="page-header__item page-header__item--nav">
-                <a class="page-header__link page-header__link--active" href="./portfolio.html">Портфолио</a>
-              </li>
-              <li class="page-header__item page-header__item--nav">
-                <a class="page-header__link" href="">Контакты</a>
-              </li>
-            </ul>
-            <ul class="page-header__list page-header__list--contact">
-              <li class="page-header__item page-header__item--contact">
-                <a href="mailto:info@devstudio.com" class="page-header__link">
-                  <svg class="page-header__icon--mail">
-                    <use href="./images/sprite.svg#iconenvelope"></use>
-                  </svg>
-                  info@devstudio.com
-                </a>
-              </li>
-              <li class="page-header__item page-header__item--contact">
-                <a href="tel:+380961111111" class="page-header__link">
-                  <svg class="page-header__icon--tell">
-                    <use href="./images/sprite.svg#iconsmartphone"></use>
-                  </svg>
-                  +38(096)111 11 11
-                </a>
-              </li>
-            </ul>
+            <div class="position" id="position">
+              <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
+              <button type="button" aria-expanded="false" class="button__logo">
+                <svg width="40" height="40" aria-label="mobile menu switch" aria-controls="position">
+                  <use class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
+                  <use class="icon-cross" href="./images/sprite.svg#iconmenu_close"></use>
+                </svg>
+              </button>
+            </div>
+            <div class="page-header__menu">
+              <ul class="page-header__list page-header__list--nav">
+                <li class="page-header__item page-header__item--nav">
+                  <a class="page-header__link " href="./index.html">Студия</a>
+                </li>
+                <li class="page-header__item page-header__item--nav">
+                  <a class="page-header__link page-header__link--active" href="./portfolio.html">Портфолио</a>
+                </li>
+                <li class="page-header__item page-header__item--nav">
+                  <a class="page-header__link" href="">Контакты</a>
+                </li>
+              </ul>
+              <ul class="page-header__list page-header__list--contact ">
+                <li class="page-header__item page-header__item--contact">
+                  <a href="mailto:info@devstudio.com" class="page-header__link page-header__link--mail">
+                    <svg class="page-header__icon--mail">
+                      <use href="./images/sprite.svg#iconenvelope"></use>
+                    </svg>
+                    info@devstudio.com
+                  </a>
+                </li>
+                <li class="page-header__item page-header__item--contact">
+                  <a href="tel:+380961111111" class="page-header__link page-header__link--tell">
+                    <svg class="page-header__icon--tell">
+                      <use href="./images/sprite.svg#iconsmartphone"></use>
+                    </svg>
+                    +38(096)111 11 11
+                  </a>
+                </li>
+              </ul>
+              <ul class="page-header__list page-header__list--mobile">
+                <li class="page-header__item page-header__item--contact">
+                  <a href="tel:+380961111111" class="page-header__link page-header__link--tell">
+                    <svg class="page-header__icon--tell">
+                      <use href="./images/sprite.svg#iconsmartphone"></use>
+                    </svg>
+                    +38(096)111 11 11
+                  </a>
+                </li>
+                <li class="page-header__item page-header__item--contact">
+                  <a href="mailto:info@devstudio.com" class="page-header__link page-header__link--mail">
+                    <svg class="page-header__icon--mail">
+                      <use href="./images/sprite.svg#iconenvelope"></use>
+                    </svg>
+                    info@devstudio.com
+                  </a>
+                </li>
+              </ul>
+              <ul class="page-header__list-social">
+                <li class="page-header__item-social">
+                  <a class="social-border" href="">Instagram</a>
+                </li>
+                <li class="page-header__item-social">
+                  <a class="social-border" href="">Twitter</a>
+                </li>
+                <li class="page-header__item-social">
+                  <a class="social-border" href="">Facebook</a>
+                </li>
+                <li class="page-header__item-social">
+                  <a class="social-border" href="">LinkedIn</a>
+                </li>
+              </ul>
+    
+            </div>
+          </nav>
         </div>
-        </nav>
-      </div>
       </div>
     </header>
     
