--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
                     <button type="button"  aria-expanded="false" class="button__logo" mob-menu__open-btn>
                       <svg width="40" height="40" aria-label="mobile menu switch" aria-controls="page-header__menu" >
-                        <use mob-menu__open-btn class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
+                        <use class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
                         <use class="icon-cross" href="./images/sprite.svg#iconmenu_close"></use>
                       </svg>
                     </button>
