--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                   <div class="position">
                     <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
                     <button type="button"  aria-expanded="false" class="button__logo" >
-                      <svg width="40" height="40" aria-label="mobile menu switch" aria-controls="position" mob-menu__open-btn>
-                        <use  class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
-                        <use class="icon-cross" href="./images/sprite.svg#iconmenu_close"></use>
+                      <svg width="40" height="40" aria-label="mobile menu switch" aria-controls="position">
+                        <use  class="icon-menu" href="./images/sprite.svg#iconmenu_open " mob-menu__open-btn></use>
+                        <use class="icon-cross" href="./images/sprite.svg#iconmenu_close" mob-menu__close-btn></use>
                       </svg>
                     </button>
                   </div>
