--- a/index.html
+++ b/index.html
@@ -530,8 +530,8 @@
             </div>
         </div>
     </footer>
-    <script src="./js/modal.js"></script>
-    <script src="./js/mobile-menu.js"></script>
+    <script src="../js/modal.js"></script>
+    <script src="../js/mobile-menu.js"></script>
 </body>
 
 </html>
