--- a/portfolio.html
+++ b/portfolio.html
@@ -304,25 +304,6 @@
           </div>
         </section>
     </main>
-
-
-<div class="prob">
-    <button type="button" class="knopka" mob-menu__open-btn>
-      <svg width="40" height="40" class="burger">
-        <use class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
-      </svg>
-    </button>
-    <div class="menuwka is-hidden" mob-menu >
-<a href="" class="red">fff</a>
-    <button type="button" aria-expanded="false" class="knopka" mob-menu__close-btn>
-    <svg width="40" height="40" class="close">
-    <use class="icon-cross" href="./images/sprite.svg#iconmenu_close"></use>
-    </svg>
-    </div>
-</div>
-
-
-
     <!-- Підвал -->
     <footer class="footer">
       <div class="container footer__container">
@@ -388,7 +369,7 @@
         </div>
       </div>
     </footer>
-    <script src="./js/modal.js"></script>
-        <script src="./js/mobile-menu.js"></script>
+    <script src="../js/modal.js"></script>
+    <script src="../js/mobile-menu.js"></script>
 </body>
 </html> 
