--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                           <source srcset="./images/mobile/nicholas.jpg 1x, ./images/mobile/nicholas@2X.jpg 2x" media="(max-width: 767px)" />
                           <source srcset="./images/tablet/nicholas.jpg 1x, ./images/tablet/nicholas@2X.jpg 2x" media="(max-width: 1199px)" />
                           <source srcset="./images/laptop/nicholas.jpg 1x, ./images/laptop/nicholas@2X.jpg 2x" media="(min-width: 1200px)" />
-                          <img class="foto" src="/images/mobile/nicholas.jpg" alt="Николай Тарасов" />
+                          <img class="foto" src="./images/mobile/nicholas.jpg" alt="Николай Тарасов" />
                         </picture>
                         <div class="name-container">
                             <h3 class="comanda__name">Николай Тарасов</h3>
